--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,14 @@
 # Example Site settings
 
-#google_analytics: UA-NNNNNNNN-N
+google_analytics: UA-NNNNNNNN-N
 
-#header_pages:
-#  - index.md
-#  - about.md
+header_pages:
+  - index.md
+  - about.md
 
-#footer: 'follow us on <a href="https://twitter.com/">twitter</a>'
+footer: 'follow me on <a href="https://instagram.com/victorfrnds">Instagram</a>'
 
-#style: light # dark (default) or light
+style: dark # light (default) or light
 #listen_for_clients_preferred_style: true # true or false (default)
 
 plugins:
